--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -11,9 +11,9 @@
 
 
 .navbar{
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2) !important;
     /* Minimal browser support */
-    backdrop-filter: blur(2px); 
+    backdrop-filter: blur(2px) !important; 
 }
 
 .navbar-pc-logo{
