Working on HomeSection. Finished *Featured section* of the section

--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -28,7 +28,7 @@
 
 .navbar-language-switch{
     height: 30px !important;
-    color: white;
+    color: white !important;
     background: rgba(217, 217, 217, 0.14);
     backdrop-filter: blur(2px);
 }
