--- a/src/styles/components/Banner.css
+++ b/src/styles/components/Banner.css
@@ -1,3 +1,10 @@
+@media (max-width: 1155px) {
+    .banner-container{
+        height: 700px !important;
+    }
+}
+
+
 @media (max-width: 900px) {
     .banner-container{
         height: 600px !important;
