--- a/src/styles/components/Banner.css
+++ b/src/styles/components/Banner.css
@@ -30,7 +30,7 @@
     display: flex;
     align-self: center;
     flex-direction: column;
-    width: 450px;
+    width: 550px;
     background: rgba(0, 0, 0, 0.15);
     border: 1px solid rgba(132, 132, 132, 0.5);
     backdrop-filter: blur(1.5px);
@@ -44,4 +44,8 @@
     font-family: 'Ubuntu', sans-serif !important;
     font-weight: 300;
     color: white;
+}
+
+#banner-subtext{
+    font-size: 23px !important;
 }
