--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -13,7 +13,11 @@
     .navbar-pc-logo{
         display: none !important;
     }
+    #lng-selector{
+        display: none !important;
+    }
 }
+
 
 
 .navbar{
@@ -34,7 +38,7 @@
 
 .navbar-language-switch{
     height: 30px !important;
-    color: white !important;
+    color: white;
     background: rgba(217, 217, 217, 0.14);
     backdrop-filter: blur(2px);
 }
