--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -15,6 +15,9 @@
         margin: 0px 0px 20px 50px !important;
         width: 100% !important;
     }
+    .footer-column h3{
+        color: #AC905E !important;
+    }
 
 }
 @media (max-width:270px) {
