--- a/src/styles/components/Banner.css
+++ b/src/styles/components/Banner.css
@@ -30,6 +30,7 @@
     display: flex;
     align-self: center;
     flex-direction: column;
+    word-break: break-all;
     width: 550px;
     background: rgba(0, 0, 0, 0.15);
     border: 1px solid rgba(132, 132, 132, 0.5);
