--- a/src/styles/components/HomeSection.css
+++ b/src/styles/components/HomeSection.css
@@ -326,7 +326,8 @@
 
 .section-join-button{
     margin: 30px 0 0 0 !important;
-    width: 180px;
+    max-width: 240px;
+    font-size: 12px !important;
     font-weight: 300 !important;
     border-radius: 0px !important;
     height: 50px !important;
