--- a/src/styles/components/HomeSection.css
+++ b/src/styles/components/HomeSection.css
@@ -22,17 +22,30 @@
     gap: 8px;
     margin-top: 20px;
     width: 100%;
+    
 }
 
 .section-featured-item{
     width: 400px;
     border-radius: 0px !important;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px -1px 8px;
 }
 
 .section-featured-item img{
     width: 100%;
     border-bottom: solid 5px #AC905E;
 }
+
+/* .section-featured-link{
+    font-size: 18px;
+    margin-top: 15px;
+    color: #AC905E;
+}
+.section-featured-link:hover{
+    color: #ac905eb9;
+    transition: ease-in-out 0.3s;
+} */
+
 
 #section-featured-name{
     margin: 3px 0px 0px 15px;
@@ -147,6 +160,7 @@
     display: flex;
     height: 370px;
     background-color: rgba(192, 159, 102, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 8px;
 }
 
 .section-decore-left, .section-decore-right{
@@ -308,11 +322,12 @@
     display: flex;
     margin: 50px 0px 50px 0px;
     height: 620px;
-    background-image: url('https://i.ibb.co/71CVvjP/join-clientzone-img.png');
+    background-image: url('https://i.ibb.co/N6jL0Cx/join-clientzone-img.png');
     background-position: center bottom;
     background-repeat: no-repeat; 
     background-size: cover; 
     width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 1px 8px;
 }
 
 .section-join-content{
