--- a/src/styles/components/HomeSection.css
+++ b/src/styles/components/HomeSection.css
@@ -29,22 +29,13 @@
     width: 400px;
     border-radius: 0px !important;
     box-shadow: rgba(0, 0, 0, 0.08) 0px -1px 8px !important;
+    margin: 10px 0 10px 0;
 }
 
 .section-featured-item img{
     width: 100%;
     border-bottom: solid 5px #AC905E;
 }
-
-/* .section-featured-link{
-    font-size: 18px;
-    margin-top: 15px;
-    color: #AC905E;
-}
-.section-featured-link:hover{
-    color: #ac905eb9;
-    transition: ease-in-out 0.3s;
-} */
 
 
 #section-featured-name{
@@ -57,6 +48,9 @@
     text-align: center;
     color: white;
 }
+.section-featured-square-box h6{
+    font-size: 18px;
+}
 #section-featured-price{
     margin: 3px 0px 0px 15px;
     font-weight: 300;
@@ -66,6 +60,7 @@
     font-weight: 300 !important;
     margin: 3px 0px 10px 15px !important;
     box-shadow: 2px 2px 4px rgba(192, 159, 102, 0.4) !important;
+    width: fit-content;
 }
 @media (max-width: 1870px) {
     .section-featured-item{
@@ -86,9 +81,7 @@
 }
 
 @media (max-width: 1230px) {
-    #section-featured-item-3{
-        display: none !important;
-    }
+
     .section-featured-item{
         width: 320px !important;
     }
@@ -186,6 +179,7 @@
     margin: 0px 15px 0 0px;
     color: white;
     font-size: 26px;
+    text-shadow: rgb(154, 154, 154) 1px 0 5px;
 }
 
 #section-decore-right-inin{
@@ -399,6 +393,32 @@
     color: #ac905ea2;
     transition: 0.2s ease-in;
     font-size: 17px !important;
+}
+
+
+/*  */
+
+.mySwiper{
+    margin-top: 28px;
+    width: 100%;
+    height: auto;
+}
+
+.swiper-slides{
+    display: flex !important;
+    height: 100%;
+    flex-direction: column;
+    margin: 10px 0px 20px 5px;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px -1px 8px !important;
+}
+.swiper-slides img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.swiper-pagination{
+    bottom: var(--swiper-pagination-bottom, -5px) !important;
 }
 
 
