--- a/src/styles/Partners.css
+++ b/src/styles/Partners.css
@@ -18,3 +18,14 @@
     align-self: center;
     color: white;
 }
+
+
+
+.logo-swiper{
+    width: 100%;
+}
+.logo-swiperslide img{
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+}
