--- a/src/styles/Exports.css
+++ b/src/styles/Exports.css
@@ -1,5 +1,5 @@
 .google-map{
-    margin: 40px 0 40px 0;
+    margin: 40px 0 40px 0 !important;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 8px;
 }
 
