mini animation for Export spage icons

--- a/src/styles/Exports.css
+++ b/src/styles/Exports.css
@@ -15,3 +15,13 @@
 #exports-subtitle1{
     margin-left: 50px;
 }
+
+
+.exports-icons-content:hover .exports-icons-icon{
+    transition: ease 0.3s;
+    transform: rotate(-10deg);
+}
+.exports-icons-content:not(:hover) .exports-icons-icon{
+    transition: ease 0.3s;
+    transform: rotate(0deg);
+}
