--- a/src/styles/components/Banner.css
+++ b/src/styles/components/Banner.css
@@ -54,3 +54,45 @@
 #banner-subtext{
     font-size: 23px !important;
 }
+
+
+/* Animations for Banner */
+
+.fade-in-text {
+    animation: fadein 1.6s;
+    -moz-animation: fadein 1.6s; /* Firefox */
+    -webkit-animation: fadein 1.6s; /* Safari and Chrome */
+    -o-animation: fadein 1.6s; /* Opera */
+}
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
+}
