--- a/src/styles/Partners.css
+++ b/src/styles/Partners.css
@@ -20,7 +20,6 @@
 }
 
 
-
 .logo-swiper{
     width: 100%;
 }
@@ -28,4 +27,17 @@
     width: 100%;
     height: 200px;
     object-fit: contain;
+}
+
+@media (max-width: 650px) {
+    .partners-join-content h2{
+        font-size: 44px !important;
+    }
+    
+}
+@media (max-width: 350px) {
+    .partners-join-content h2{
+        font-size: 38px !important;
+    }
+    
 }
