--- a/src/styles/components/HomeSection.css
+++ b/src/styles/components/HomeSection.css
@@ -206,7 +206,7 @@
     }
     .section-decore{
         height: fit-content !important;
-        padding: 20px 0 20px 0;
+        padding: 20px 0 20px 0 !important;
     }
 }
 
@@ -278,7 +278,7 @@
     }
     .section-decore-right{
         background-color: #dfcfb2e9;
-        padding: 30px 5px 30px 30px;
+        padding: 30px 5px 30px 30px !important;
         width: 90% !important;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 8px;
     }
