Added autoplay for featured section, as well as made it more obviouse that it's a slider by making the cursos 'grab'

--- a/src/styles/components/HomeSection.css
+++ b/src/styles/components/HomeSection.css
@@ -369,6 +369,10 @@
     margin-top: 28px;
     width: 100%;
     height: auto;
+    cursor: -webkit-grab; cursor: grab;
+}
+.featured-swiper:active{
+    cursor: -webkit-grabbing; cursor: grabbing;
 }
 
 .swiper-slides{
